@@ -1,3 +1,7 @@
+2000-06-03  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Show correct names for food items, reagants, etc.
+
 2000-06-02  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Change to lt() fixes a couple rendering goofs.
